test-data/elab/if/branches-mismatch.snapshot
exit status: 0

stdout = """
(match true {
    true => 1,
    false => #error,
}) : Int

"""

stderr = """
error: Type mismatch: expected `Int`, found `Char`
  ┌─ test-data/elab/if/branches-mismatch.pion:1:28
  │
1 │ #check if true then 1 else 'a';
  │                            ^^^


"""
